Fix button styling

--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -5971,13 +5971,7 @@ body .kbs .button {
 body .kbs .button:hover {
   background: #000;
 }
-body .kbs .order-option .button.primary, body .kbs .reservation-options .button.primary {
-  color: #fff !important;
-}
-body .kbs .order-option .button.primary:focus, body .kbs .reservation-options .button.primary:focus {
-  color: #134571 !important;
-}
-body .kbs .order-option .button.primary:focus:hover, body .kbs .reservation-options .button.primary:focus:hover {
+body .kbs .order-option .button.primary, body .kbs .reservation-option .button.primary {
   color: #fff !important;
 }
 body .kbs .secondary {
