--- a/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ReturnToBooking.cshtml
@@ -11,6 +11,13 @@
         <div class="heading align-left">
             <div class="row">
                 <div class="col-md-12">
+                    @if (!ViewData.ModelState.IsValid)
+                    {
+                        <div class="summary-error-message">
+                            <h2>Sorry there was a problem.</h2>
+                            <p>Check the highlighted fields to continue.</p>
+                        </div>
+                    }
                     <p>
                         If you have already reserved a space, you can use the form below to find your document
                         order form. You will need to complete your document order at least <span class="bold-text">
