--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -26,14 +26,16 @@
         </section>
     </div>
 
-    @if (!ViewData.ModelState.IsValid)
-    {
-        <span class="error-message full-width">Something went wrong. Please check your details.</span>
-    }
-
     <div class="heading">
         <div class="row">
             <div class="col-md-12">
+                @if (!ViewData.ModelState.IsValid)
+                {
+                    <div class="summary-error-message">
+                        <h2>Sorry there was a problem.</h2>
+                        <p>Check the highlighted fields to continue.</p>
+                    </div>
+                }
                 <h2>You are about to provisionally book this visit</h2>
                 <p>Your booking will be confirmed when you submit a document order.</p>
             </div>
