--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -8002,13 +8002,65 @@ form input[type=checkbox] {
   margin-bottom: 0.5em;
 }
 
+.summary-error-message {
+  color: #fff;
+  display: block;
+  padding: 2em;
+  background: #d4351c;
+  width: 100%;
+  margin-bottom: 2em;
+  text-align: center;
+}
+.summary-error-message h2 {
+  margin-top: 0;
+}
+.summary-error-message p {
+  margin-bottom: 0 !important;
+  font-size: 1.1em;
+}
+
+.order-form .form-error {
+  color: #d4351c;
+  font-weight: bold;
+  display: block;
+  margin-left: 17px;
+  padding: 10px 15px;
+  font-size: 0.95em;
+}
+@media screen and (min-width: 768px) {
+  .order-form .form-error {
+    max-width: 500px;
+    margin-left: 17px;
+    padding: 10px 15px;
+  }
+}
+@media screen and (min-width: 992px) {
+  .order-form .form-error {
+    margin-left: 0;
+    padding: 10px 0;
+  }
+}
+@media screen and (min-width: 1100px) {
+  .order-form .form-error {
+    max-width: 250px;
+    padding: 10px 15px;
+    margin-left: 17px;
+  }
+}
+.order-form .form-warning {
+  border: 2px solid #d4351c;
+}
+
 .error-message {
   color: #000;
+  color: #fff;
   display: block;
   padding: 3px 7px;
   background: #f9f7e2;
+  background: #d4351c;
   width: 100%;
   max-width: 480px;
+  margin-left: 40px;
 }
 
 .helper-text {
