--- a/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
+++ b/book-a-reading-room-visit.web/Views/Shared/Partials/_StandardOrderForm.cshtml
@@ -13,31 +13,40 @@
     <div class="col-md-3 col-sm-6 col-xs-6">
         <div class="order-form-field">
             <label for="doc-1">1</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference1)
-
             @if (ViewData.ModelState["DocumentReference1"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference1, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference1, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference1)
             }
         </div>
 
         <div class="order-form-field">
             <label for="doc-2">2</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference2)
-
             @if (ViewData.ModelState["DocumentReference2"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference2, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference2, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference2)
             }
         </div>
 
         <div class="order-form-field">
             <label for="doc-3">3</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference3)
-
             @if (ViewData.ModelState["DocumentReference3"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference3, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference3, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference3)
             }
         </div>
     </div>
@@ -45,31 +54,40 @@
     <div class="col-md-3 col-sm-6 col-xs-6">
         <div class="order-form-field">
             <label for="doc-4">4</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference4)
-
             @if (ViewData.ModelState["DocumentReference4"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference4, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference4, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference4)
             }
         </div>
 
         <div class="order-form-field">
             <label for="doc-5">5</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference5)
-
             @if (ViewData.ModelState["DocumentReference5"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference5, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference5, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference5)
             }
         </div>
 
         <div class="order-form-field">
             <label for="doc-6">6</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference6)
-
             @if (ViewData.ModelState["DocumentReference6"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference6, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference6, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference6)
             }
         </div>
     </div>
@@ -77,31 +95,40 @@
     <div class="col-md-3 col-sm-6 col-xs-6">
         <div class="order-form-field">
             <label for="doc-7">7</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference7)
-
             @if (ViewData.ModelState["DocumentReference7"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference7, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference7, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference7)
             }
         </div>
 
         <div class="order-form-field">
             <label for="doc-8">8</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference8)
-
             @if (ViewData.ModelState["DocumentReference8"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference8, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference8, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference8)
             }
         </div>
 
         <div class="order-form-field">
             <label for="doc-9">9</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference9)
-
             @if (ViewData.ModelState["DocumentReference9"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference9, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference9, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference9)
             }
         </div>
     </div>
@@ -109,31 +136,40 @@
     <div class="col-md-3 col-sm-6 col-xs-6">
         <div class="order-form-field">
             <label for="doc-10">10</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference10)
-
             @if (ViewData.ModelState["DocumentReference10"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference10, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference10, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference10)
             }
         </div>
 
         <div class="order-form-field">
             <label for="doc-11">11</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference11)
-
             @if (ViewData.ModelState["DocumentReference11"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference11, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference11, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference11)
             }
         </div>
 
         <div class="order-form-field">
             <label for="doc-12">12</label>
-            @Html.TextBoxFor(Model => Model.DocumentReference12)
-
             @if (ViewData.ModelState["DocumentReference12"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.DocumentReference12, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.DocumentReference12, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.DocumentReference12)
             }
         </div>
     </div>
@@ -149,31 +185,40 @@
     <div class="col-md-3 col-sm-6 col-xs-6">
         <div class="order-form-field">
             <label for="reserve-1">A</label>
-            @Html.TextBoxFor(Model => Model.ReserveDocumentReference1)
-
             @if (ViewData.ModelState["ReserveDocumentReference1"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference1, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference1, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference1)
             }
         </div>
 
         <div class="order-form-field">
             <label for="reserve-2">B</label>
-            @Html.TextBoxFor(Model => Model.ReserveDocumentReference2)
-
             @if (ViewData.ModelState["ReserveDocumentReference2"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference2, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference2, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference2)
             }
         </div>
 
         <div class="order-form-field">
             <label for="reserve-3">C</label>
-            @Html.TextBoxFor(Model => Model.ReserveDocumentReference3)
-
             @if (ViewData.ModelState["ReserveDocumentReference3"]?.Errors.Count() > 0)
             {
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference3, "", new { @class = "form-warning" })
                 @Html.ValidationMessageFor(Model => Model.ReserveDocumentReference3, "", new { @class = "form-error" })
+            }
+            else
+            {
+                @Html.TextBoxFor(Model => Model.ReserveDocumentReference3)
             }
         </div>
     </div>
