--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -23,6 +23,12 @@ a.button {
     }
 }
 
+.checkbox-warning {
+    label::before {
+        border: 2px solid #d4351c !important;
+    }
+}
+
 .standfirst {
     font-size: 1.1em;
     margin-bottom: 3em !important;
