--- a/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
+++ b/book-a-reading-room-visit.web/wwwroot/css/base-sass.css
@@ -7893,6 +7893,10 @@ a.button {
   }
 }
 
+.checkbox-warning label::before {
+  border: 2px solid #d4351c !important;
+}
+
 .standfirst {
   font-size: 1.1em;
   margin-bottom: 3em !important;
