--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_forms.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_forms.scss
@@ -1,276 +1,328 @@
 /* TNA form styles */
 
 form {
-  fieldset {
-    padding: 0 !important;
-    margin-bottom: 0.6em !important;
-    border: 0 !important;
-  }
-  legend {
-    font-family: $body_font;
-    font-weight: bold;
-    margin: 0 0 0.6em 0;
-    width: auto;
-    padding: 0 !important;
-    border: 0 !important;
-  }
-  label {
-    font-family: $body_font;
-    font-weight: bold;
-    font-size: 1.1em;
-  }
-  input[type="submit"] {
-    font-family: "Roboto Mono", monospace;
-    background-color: $dark;
-    color: #fff;
-    border: $grid-line;
-    padding: 0.5em 0.9em;
-    display: inline-block;
-    min-width: 24px;
-    text-align: center;
-    margin: 0;
-    &:hover {
-      background-color: #fff;
-      color: $dark;
+    fieldset {
+        padding: 0 !important;
+        margin-bottom: 0.6em !important;
+        border: 0 !important;
     }
-  }
-  input[type=text],
-  input[type=url],
-  input[type=tel],
-  input[type=number],
-  input[type=color],
-  input[type=email],
-  input[type=date],
-  input.width-half {
-    border: $grid-line;
-    padding: 8px;
-    text-indent: 5px;
-    min-width: 220px;
-    width: auto;
-  }
-  textarea {
-    border: $grid-line;
-    padding: 0.6em;
-  }
-  select {
-    height: 2.4em;
-    -webkit-border-radius: 0;
-    border: 0;
-    outline: $grid-line;
-    outline-offset: -1px;
-  }
-  input:focus,
-  input[type=radio]:focus,
-  input[type=checkbox]:focus,
-  input[type="submit"]:focus,
-  textarea:focus,
-  select:focus {
-    @include element-focus;
-  }
-  .form-row {
-    max-width: 100%;
-    margin-bottom: 1.6em;
-    &:before, &:after {
-      display: table;
-      content: " ";
-      clear: both;
-    }
-    label {
-      width: 100%;
-      margin-right: 0;
-    }
-    &.checkbox {
-      label {
+
+    legend {
+        font-family: $body_font;
+        font-weight: bold;
+        margin: 0 0 0.6em 0;
         width: auto;
-      }
+        padding: 0 !important;
+        border: 0 !important;
     }
+
+    label {
+        font-family: $body_font;
+        font-weight: bold;
+        font-size: 1.1em;
+    }
+
+    input[type="submit"] {
+        font-family: "Roboto Mono", monospace;
+        background-color: $dark;
+        color: #fff;
+        border: $grid-line;
+        padding: 0.5em 0.9em;
+        display: inline-block;
+        min-width: 24px;
+        text-align: center;
+        margin: 0;
+
+        &:hover {
+            background-color: #fff;
+            color: $dark;
+        }
+    }
+
+    input[type=text],
+    input[type=url],
+    input[type=tel],
+    input[type=number],
     input[type=color],
     input[type=email],
-    input[type=number],
-    input[type=tel],
-    input[type=text],
     input[type=date],
-    input[type=url],
-    select,
+    input.width-half {
+        border: $grid-line;
+        padding: 8px;
+        text-indent: 5px;
+        min-width: 220px;
+        width: auto;
+    }
+
     textarea {
-      width: 100%;
-      max-width: 480px;
-      &:disabled {
-        background: #eee;
-      }
-      &:read-only {
-        background: #eee;
-      }
+        border: $grid-line;
+        padding: 0.6em;
     }
-    textarea {
-      min-height: 120px;
+
+    select {
+        height: 2.4em;
+        -webkit-border-radius: 0;
+        border: 0;
+        outline: $grid-line;
+        outline-offset: -1px;
     }
-    input[type=checkbox],
-    input[type=radio] {
-      margin: 4px 10px 0;
+
+    input:focus,
+    input[type=radio]:focus,
+    input[type=checkbox]:focus,
+    input[type="submit"]:focus,
+    textarea:focus,
+    select:focus {
+        @include element-focus;
     }
-    .button-right {
-      float: right;
+
+    .form-row {
+        max-width: 100%;
+        margin-bottom: 1.6em;
+
+        &:before, &:after {
+            display: table;
+            content: " ";
+            clear: both;
+        }
+
+        label {
+            width: 100%;
+            margin-right: 0;
+        }
+
+        &.checkbox {
+            label {
+                width: auto;
+            }
+        }
+
+        input[type=color],
+        input[type=email],
+        input[type=number],
+        input[type=tel],
+        input[type=text],
+        input[type=date],
+        input[type=url],
+        select,
+        textarea {
+            width: 100%;
+            max-width: 480px;
+
+            &:disabled {
+                background: #eee;
+            }
+
+            &:read-only {
+                background: #eee;
+            }
+        }
+
+        textarea {
+            min-height: 120px;
+        }
+
+        input[type=checkbox],
+        input[type=radio] {
+            margin: 4px 10px 0;
+        }
+
+        .button-right {
+            float: right;
+        }
+
+        p {
+            margin-bottom: 5px;
+        }
+
+        .form-hint {
+            color: #6f777b;
+        }
+
+        .optional {
+            color: #6f777b;
+        }
+
+        .form-error {
+            color: #d4351c;
+            font-weight: bold;
+            display: block;
+            padding: 10px 0;
+            width: 100%;
+            max-width: 480px;
+            font-size: 0.95em;
+
+            span {
+                font-size: 1.6em;
+            }
+        }
+
+        .form-warning {
+            border: 2px solid #d4351c;
+        }
+
+        @media (max-width: 768px) {
+            max-width: 100%;
+            width: 100%;
+
+            label {
+                width: 100%;
+                margin-right: 0;
+            }
+
+            input[type=text],
+            input[type=url],
+            input[type=tel],
+            input[type=number],
+            input[type=color],
+            input[type=email],
+            textarea,
+            select {
+                width: 100%;
+            }
+
+            input[type="submit"] {
+                float: none;
+            }
+        }
     }
-    p {
-      margin-bottom: 5px;
+
+    .checkbox {
+        input[type="checkbox"] {
+            position: absolute;
+            opacity: 0;
+        }
+
+        label {
+            position: relative;
+            display: inline-block;
+            padding-left: 32px;
+        }
+
+        label::before,
+        label::after {
+            position: absolute;
+            content: "";
+            display: inline-block;
+        }
+
+        label::before {
+            height: 24px;
+            width: 24px;
+            border: $grid-line;
+            left: 0;
+            top: 2px;
+        }
+
+        label::after {
+            height: 7px;
+            width: 13px;
+            border-left: $grid-line;
+            border-bottom: $grid-line;
+            transform: rotate(-45deg);
+            left: 6px;
+            top: 9px;
+        }
+
+        input[type="checkbox"] + label::after {
+            content: none;
+        }
+
+        input[type="checkbox"]:checked + label::after {
+            content: "";
+        }
+
+        input[type="checkbox"]:focus + label::before {
+            @include element-focus;
+        }
     }
-    .form-hint {
-      color: #6f777b;
+
+    .radio {
+        input[type="radio"] {
+            position: absolute;
+            opacity: 0;
+        }
+
+        label {
+            position: relative;
+            display: inline-block;
+            padding-left: 32px;
+        }
+
+        label::before,
+        label::after {
+            position: absolute;
+            content: "";
+            display: inline-block;
+        }
+
+        label::before {
+            height: 24px;
+            width: 24px;
+            border: $grid-line;
+            border-radius: 50%;
+            left: 0;
+            top: 2px;
+        }
+
+        label::after {
+            height: 12px;
+            width: 12px;
+            background-color: $dark;
+            border-radius: 50%;
+            left: 6px;
+            top: 8px;
+        }
+
+        input[type="radio"] + label::after {
+            content: none;
+        }
+
+        input[type="radio"]:checked + label::after {
+            content: "";
+        }
+
+        input[type="radio"]:focus + label::before {
+            @include element-focus;
+        }
     }
-    .optional {
-      color: #6f777b;
-    }
-    .form-error {
-      color: #000;
-      display: block;
-      padding: 3px 7px;
-      background: $yellow-light;
-      width: 100%;
-      max-width: 480px;
-      span {
-        font-size: 1.6em;
-      }
-    }
-    .form-warning {
-      border: 2px solid #EBAB2C;
-    }
-    @media (max-width: 768px) {
-      max-width: 100%;
-      width: 100%;
-      label {
-        width: 100%;
-        margin-right: 0;
-      }
-      input[type=text],
-      input[type=url],
-      input[type=tel],
-      input[type=number],
-      input[type=color],
-      input[type=email],
-      textarea,
-      select {
-        width: 100%;
-      }
-      input[type="submit"] {
-        float: none;
-      }
-    }
-  }
-  .checkbox {
-    input[type="checkbox"] {
-      position: absolute;
-      opacity: 0;
-    }
-    label {
-      position: relative;
-      display: inline-block;
-      padding-left: 32px;
-    }
-    label::before,
-    label::after {
-      position: absolute;
-      content: "";
-      display: inline-block;
-    }
-    label::before{
-      height: 24px;
-      width: 24px;
-      border: $grid-line;
-      left: 0;
-      top: 2px;
-    }
-    label::after {
-      height: 7px;
-      width: 13px;
-      border-left: $grid-line;
-      border-bottom: $grid-line;
-      transform: rotate(-45deg);
-      left: 6px;
-      top: 9px;
-    }
-    input[type="checkbox"] + label::after {
-      content: none;
-    }
-    input[type="checkbox"]:checked + label::after {
-      content: "";
-    }
-    input[type="checkbox"]:focus + label::before {
-      @include element-focus;
-    }
-  }
-  .radio {
-    input[type="radio"] {
-      position: absolute;
-      opacity: 0;
-    }
-    label {
-      position: relative;
-      display: inline-block;
-      padding-left: 32px;
-    }
-    label::before,
-    label::after {
-      position: absolute;
-      content: "";
-      display: inline-block;
-    }
-    label::before{
-      height: 24px;
-      width: 24px;
-      border: $grid-line;
-      border-radius: 50%;
-      left: 0;
-      top: 2px;
-    }
-    label::after {
-      height: 12px;
-      width: 12px;
-      background-color: $dark;
-      border-radius: 50%;
-      left: 6px;
-      top: 8px;
-    }
-    input[type="radio"] + label::after {
-      content: none;
-    }
-    input[type="radio"]:checked + label::after {
-      content: "";
-    }
-    input[type="radio"]:focus + label::before {
-      @include element-focus;
-    }
-  }
 }
+
 .error-message, .success-message {
-  color: $dark !important;
-  border: $grid-line !important;
-  padding: 0 1em;
-  margin-bottom: 1.6em;
+    color: $dark !important;
+    border: $grid-line !important;
+    padding: 0 1em;
+    margin-bottom: 1.6em;
 }
+
 .error-message {
-  background-color: $yellow-light !important;
+    background-color: $yellow-light !important;
 }
+
 .success-message {
-  padding: 1em;
-  background-color: $green !important;
+    padding: 1em;
+    background-color: $green !important;
 }
+
 .arrow-steps li.current {
-  background-color: $dark;
-  &:after {
-    border-left: 17px solid $dark;
-  }
+    background-color: $dark;
+
+    &:after {
+        border-left: 17px solid $dark;
+    }
 }
+
 .print_button {
-  background: $dark;
-  color: #fff;
-  border: $grid-line;
-  padding: 0.6em;
-  margin: 1em 0;
-  float: none;
-  &:hover {
-    background: #fff;
-    color: $dark;
-    text-decoration: none;
-  }
+    background: $dark;
+    color: #fff;
+    border: $grid-line;
+    padding: 0.6em;
+    margin: 1em 0;
+    float: none;
+
+    &:hover {
+        background: #fff;
+        color: $dark;
+        text-decoration: none;
+    }
 }
