--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -31,12 +31,14 @@
                     </p>
 
                     <ul>
-                        <li>
-                            <a href="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReaderTicket, bookingReference = @Model.BookingReference })">
-                                Edit
-                                your document order
-                            </a>
-                        </li>
+                        @if (Model.CompleteByDate?.Date > DateTime.Today && Model.BookingStatus == BookingStatuses.Created)
+                        {
+                            <li>
+                                <a href="@Url.Action("OrderDocuments", "DocumentOrder", new { bookingType = @Model.BookingType.ToStringURL(), readerTicket = Model.ReaderTicket, bookingReference = @Model.BookingReference })">
+                                    Edit your document order
+                                </a>
+                            </li>
+                        }
                         <li>
                             <a href="#">Print your order</a>
                         </li>
@@ -110,15 +112,18 @@
                         </tr>
                     </tbody>
                 </table>
-                <form action="@Url.Action("CancelBooking", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })" method="post">
-                    @Html.AntiForgeryToken()
-                    @Html.HiddenFor(Model => Model.BookingReference)
-                    @Html.HiddenFor(Model => Model.ReaderTicket)
-                    @Html.Hidden("seattype", Model.SeatType.ToStringURL())
-                    @Html.HiddenFor(Model => Model.BookingStartDate)
-                    @Html.HiddenFor(Model => Model.SeatNumber)
-                    <button type="submit" class="button">Cancel this booking</button>
-                </form>
+                @if (Model.BookingStartDate.Date > DateTime.Today && Model.BookingStatus != BookingStatuses.Cancelled)
+                {
+                    <form action="@Url.Action("CancelBooking", "Booking", new { bookingType = @Model.BookingType.ToStringURL() })" method="post">
+                        @Html.AntiForgeryToken()
+                        @Html.HiddenFor(Model => Model.BookingReference)
+                        @Html.HiddenFor(Model => Model.ReaderTicket)
+                        @Html.Hidden("seattype", Model.SeatType.ToStringURL())
+                        @Html.HiddenFor(Model => Model.BookingStartDate)
+                        @Html.HiddenFor(Model => Model.SeatNumber)
+                        <button type="submit" class="button">Cancel this booking</button>
+                    </form>
+                }
             </div>
         </div>
     </section>
