--- a/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
+++ b/book-a-reading-room-visit.web/wwwroot/css/sass/_booking-system.scss
@@ -212,6 +212,11 @@ form {
     .form-warning {
         border: 2px solid #d4351c;
     }
+
+    input[name="Series"] + .form-error {
+        margin-left: 0;
+        padding: 10px 0 10px 0;
+    }
 }
 
 .error-message {
