--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -7,6 +7,8 @@
     ViewData["Title"] = "Secure booking";
 }
 
+@await Html.PartialAsync("Partials/_Breadcrumbs")
+
 <h1 class="display-4">2. Enter your details</h1>
 
 <div class="container content-wrapper">
