--- a/book-a-reading-room-visit.web/Views/DocumentOrder/ContinueLater.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/ContinueLater.cshtml
@@ -5,6 +5,8 @@
     ViewData["Title"] = "Continue later";
 }
 
+@await Html.PartialAsync("Partials/_Breadcrumbs")
+
 <h1 class="display-4">Before you leave</h1>
 
 <div class="container content-wrapper">
