--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -8,6 +8,8 @@
 
 @model DocumentOrderViewModel
 
+@await Html.PartialAsync("Partials/_Breadcrumbs")
+
 <h1 class="display-4">4. Order documents for your visit</h1>
 
 <div class="container content-wrapper">
