--- a/book-a-reading-room-visit.web/Views/Home/Index.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+@await Html.PartialAsync("Partials/_Breadcrumbs")
+
 <h1 class="display-4">Book a visit to view our documents</h1>
 
 <div id="home" class="text-center">
