--- a/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/BookingConfirmation.cshtml
@@ -2,9 +2,11 @@
 @using book_a_reading_room_visit.web.Helper
 @using book_a_reading_room_visit.web.Models
 @{
-ViewData["Title"] = "Booking confirmation";
+    ViewData["Title"] = "Booking confirmation";
 }
 @model BookingViewModel
+
+@await Html.PartialAsync("Partials/_Breadcrumbs")
 
 <h1 class="display-4">3. Reservation confirmation</h1>
 
