--- a/book-a-reading-room-visit.web/Views/Booking/CancellationConfirmation.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/CancellationConfirmation.cshtml
@@ -6,6 +6,8 @@
     ViewData["Title"] = "Cancel your visit";
 }
 
+@await Html.PartialAsync("Partials/_Breadcrumbs")
+
 <h1 class="display-4">Your visit has been cancelled</h1>
 
 <div class="text-center">
