--- a/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/ThankYou.cshtml
@@ -6,6 +6,8 @@
     ViewData["Title"] = "Thank you";
 }
 
+@await Html.PartialAsync("Partials/_Breadcrumbs")
+
 <h1 class="display-4">Thank you</h1>
 
 <div class="container content-wrapper">
