--- a/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
+++ b/book-a-reading-room-visit.web/Views/Home/Availability.cshtml
@@ -7,6 +7,8 @@
     ViewData["Title"] = "Visit availability";
 }
 
+@await Html.PartialAsync("Partials/_Breadcrumbs")
+
 <h1 class="display-4">1. Select a date</h1>
 
 <div class="container content-wrapper">
