--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderComplete.cshtml
@@ -6,7 +6,7 @@
 
 @await Html.PartialAsync("Partials/_Breadcrumbs")
 
-<h1 class="display-4">5. Order complete</h1>
+<h1 class="display-4">5. Order summary</h1>
 
 <div class="container content-wrapper">
 
@@ -18,7 +18,7 @@
                 <li><span class="step-number">2</span> <span class="step">Enter your details</span></li>
                 <li><span class="step-number">3</span> <span class="step">Reservation confirmation</span></li>
                 <li><span class="step-number">4</span> <span class="step">Order documents</span></li>
-                <li aria-current="page" class="active"><span class="step-number">5</span> <span class="step">Order complete</span></li>
+                <li aria-current="page" class="active"><span class="step-number">5</span> <span class="step">Order summary</span></li>
             </ol>
         </div>
     </section>
