Update heading error message text

--- a/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
+++ b/book-a-reading-room-visit.web/Views/DocumentOrder/OrderDocuments.cshtml
@@ -33,8 +33,8 @@
                 @if (!ViewData.ModelState.IsValid)
                 {
                     <div class="summary-error-message">
-                        <h2>Sorry there was a problem.</h2>
-                        <p>Check the highlighted fields to continue.</p>
+                        <h2>There is a problem.</h2>
+                        <p>Check the highlighted responses below.</p>
                     </div>
                 }
                 <h2>Tell us which documents you would like to see</h2>
