--- a/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
+++ b/book-a-reading-room-visit.web/Views/Booking/SecureBooking.cshtml
@@ -34,8 +34,8 @@
                 @if (!ViewData.ModelState.IsValid)
                 {
                     <div class="summary-error-message">
-                        <h2>Sorry there was a problem.</h2>
-                        <p>Check the highlighted fields to continue.</p>
+                        <h2>There is a problem.</h2>
+                        <p>Check the highlighted responses below.</p>
                     </div>
                 }
                 <h2>You are about to provisionally book this visit</h2>
